==> SoCXin/CH32V203/IAP/M0/3_Device/MM32F032xx_s/HAL_lib/src/HAL_gpio.c <==
#define _HAL_GPIO_C_
#include "hal_gpio.h"
#include "hal_rcc.h"

void GPIO_DeInit(GPIO_TypeDef* GPIOx)
{
    switch (*(u32*)&GPIOx) {
        case (u32)GPIOA:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOA, DISABLE);
            break;
        //COMMON_DisableIpClock(emCLOCK_GPIOA);  break;
        case (u32)GPIOB:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOB, DISABLE);
            break;
        //COMMON_DisableIpClock(emCLOCK_GPIOB);  break;
        case (u32)GPIOC:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOC, DISABLE);
            break;
        //COMMON_DisableIpClock(emCLOCK_GPIOC);  break;
        case (u32)GPIOD:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOD, DISABLE);
            break;
        //COMMON_DisableIpClock(emCLOCK_GPIOD);  break;
        default:
            break;
    }
}

void GPIO_Init(GPIO_TypeDef* GPIOx, GPIO_InitTypeDef* pInitStruct)
{
    u8   idx;
    u8 i;
    u32 tmp;
    __IO u32* pReg;

    // 1x
    u32 dat = pInitStruct->GPIO_Mode & 0x0F;
    if (pInitStruct->GPIO_Mode & 0x10)
        dat |= pInitStruct->GPIO_Speed;

    // 0x
    pReg = &GPIOx->CRL;
    for (i = 0; i < 8; i++) {
        idx = i * 4;
        if ((pInitStruct->GPIO_Pin) & (1 << i)) {
            *pReg = (*pReg & ~(0xF << idx)) | (dat << idx);
        }
    }

    pReg    = &GPIOx->CRH;
    tmp = pInitStruct->GPIO_Pin >> 8;
    for (i = 0; i < 8; i++) {
        idx = i * 4;
        if (tmp & (1 << i)) {
            *pReg = (*pReg & ~(0xF << idx)) | (dat << idx);
        }
    }

    // 2x,4x
    if (pInitStruct->GPIO_Mode == GPIO_Mode_IPD)
        GPIOx->BRR |= pInitStruct->GPIO_Pin;
    else if (pInitStruct->GPIO_Mode == GPIO_Mode_IPU)
        GPIOx->BSRR |= pInitStruct->GPIO_Pin;
}

void GPIO_StructInit(GPIO_InitTypeDef* GPIO_InitStruct)
{
    // Reset GPIO init structure parameters values
    GPIO_InitStruct->GPIO_Pin  = GPIO_Pin_All;
    GPIO_InitStruct->GPIO_Speed = GPIO_Speed_2MHz;
    GPIO_InitStruct->GPIO_Mode = GPIO_Mode_IN_FLOATING;
}

void GPIO_PinAFConfig(GPIO_TypeDef* GPIOx, u8 pin, u8 funcAF)
{
    u8 shift = (pin & 0x07) * 4;
    u32* ptr = (pin < 8) ? (u32*)&GPIOx->AFRL : (u32*)&GPIOx->AFRH;
    *ptr = (*ptr & ~(0x0F << shift)) | (funcAF << shift);
}
